--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
   },
   "phet": {
     "requirejsNamespace": "AREA_MODEL_COUNTING",
+    "phetLibs": [
+      "area-model-common",
+      "twixt",
+      "vegas",
+      "vibe"
+    ],
     "runnable": true,
     "supportedBrands": [
       "phet",
