--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     ],
     "accessible": true,
     "simulation": true
+  },
+  "eslintConfig": {
+    "extends": "../chipper/eslint/.eslintrc.js"
   }
 }
