rename accessibility list to be interaction description specific, https://github.com/phetsims/phet-io/issues/1628

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
       "phet",
       "adapted-from-phet"
     ],
-    "accessible": true,
+    "supportsInteractiveDescriptions": true,
     "simulation": true
   },
   "eslintConfig": {
