--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
       "path": "../area-model-common"
     },
     {
-      "path": "../twixt"
+      "path": "../twixt/tsconfig-module.json"
     },
     {
       "path": "../vegas"
