Adding screenNameKeys to package.json (and adding some translated strings to some runnables), see https://github.com/phetsims/chipper/issues/1367

--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     ],
     "simulation": true,
     "supportsOutputJS": true,
-    "published": true
+    "published": true,
+    "screenNameKeys": [
+      "AREA_MODEL_COMMON/screen.multiply",
+      "AREA_MODEL_COMMON/screen.partition"
+    ]
   },
   "eslintConfig": {
     "extends": "../chipper/eslint/sim_eslintrc.js"
