--- a/package.json
+++ b/package.json
@@ -30,6 +30,18 @@
     ]
   },
   "eslintConfig": {
-    "extends": "../chipper/eslint/sim_eslintrc.js"
+    "extends": "../chipper/eslint/sim_eslintrc.js",
+    "overrides": [
+      {
+        "files": [
+          "**/*.ts"
+        ],
+        "parserOptions": {
+          "project": [
+            "../area-model-introduction/tsconfig.json"
+          ]
+        }
+      }
+    ]
   }
 }
