add "supportsDynamicLocale": true to sims that support it but didn't have it, https://github.com/phetsims/joist/issues/1005

--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
       "twixt",
       "vegas"
     ],
+    "simFeatures": {
+      "supportsDynamicLocale": true
+    },
     "runnable": true,
     "supportedBrands": [
       "phet",
